Fix misaligned tab-icons for remotely-opened files
Resolves #271: File icons aligned to top when using Remote-Edit.

--- a/styles/file-icons.less
+++ b/styles/file-icons.less
@@ -633,3 +633,14 @@ body.file-icons-on-changes {
     }
   }
 }
+
+
+// #gh-271: Undo styling applied by Remote-Edit
+@{pane-tab-selector}{
+  &.icon-globe::before{
+    display: inline;
+    line-height: inherit;
+    width: auto;
+    height: auto;
+  }
+}
